--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/preset-react": "^7.8.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
