--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.12.0",
     "react-inlinesvg": "^1.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "react-toastify": "^5.5.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.8.3"
