--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-bootstrap-carousel": "^4.0.2",
     "react-dom": "^16.12.0",
     "react-inlinesvg": "^1.2.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "0.9.5",
-    "react-toastify": "^5.5.0"
+    "react-toastify": "^5.5.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.8.3"
