--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.8.3"
+    "@babel/preset-react": "^7.8.3",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
