--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mdbreact": "^4.25.0",
     "popper.js": "^1.16.0",
     "react": "^16.12.0",
